added the reading history functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="no_readings">Your past readings will appear here</string>
     <string name="your_reading">Your Reading</string>
     <string name="reading_interpretation">Reading Interpretation</string>
-        <string name="app_title">Tarot Card Reading</string>
+        <string name="app_title">Welcome, Seeker!  </string>
         <string name="ask_your_question">What would you like to know?</string>
-        <string name="start_reading">Start Reading</string>
+        <string name="start_reading">Show Cards</string>
         <string name="select_three_cards">Select three cards for your reading</string>
 </resources>
